# whiteven

./: Anchor.toml  Cargo.toml  LICENSE  README.md  tsconfig.json
programs/whiteven/: Cargo.toml
programs/whiteven/src/: errors.rs  lib.rs  state.rs
programs/whiteven/src/instructions/: create.rs  mod.rs  vote.rs
tests/: create.ts  list.ts  vote.ts
tests/how_to_use/: create.txt  list.txt  setup.txt  vote.txt
