[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
toml = "=0.8.12"
toml_datetime = "=0.6.5"
toml_edit = "=0.22.12"
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
